--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "novosga/users-bundle",
     "license": "MIT",
-    "type": "library",
+    "type": "novosga-module",
     "autoload": {
         "psr-4": { "Novosga\\UsersBundle\\": "" }
     },
