--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     },
     "require": {
         "php": "^7.0.8",
-        "novosga/core": "self.version"
+        "novosga/core": "self.version",
+        "pagerfanta/pagerfanta": "^1.0"
     },
     "extra": {
         "branch-alias": {
