--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "psr-4": { "Novosga\\UsersBundle\\": "" }
     },
     "require": {
-        "php": "^7.1.3",
+        "php": ">=7.1.3",
         "novosga/core": "^2.1",
         "pagerfanta/pagerfanta": "^1.0"
     },
