--- a/composer.json
+++ b/composer.json
@@ -3,16 +3,34 @@
     "license": "MIT",
     "type": "novosga-module",
     "autoload": {
-        "psr-4": { "Novosga\\UsersBundle\\": "" }
+        "psr-4": { "Novosga\\UsersBundle\\": "src/" }
+    },
+    "autoload-dev": {
+        "psr-4": { "Novosga\\UsersBundle\\Tests\\": "tests/" }
     },
     "require": {
-        "php": ">=7.2.5",
-        "novosga/core": "^2.1",
-        "pagerfanta/pagerfanta": "^1.0"
+        "php": ">=8.2",
+        "doctrine/orm": "^3.2",
+        "novosga/core": "2.2.x-dev",
+        "pagerfanta/doctrine-orm-adapter": "*",
+        "pagerfanta/pagerfanta": "^4.6",
+        "symfony/framework-bundle": "7.1.*",
+        "symfony/password-hasher": "7.1.*",
+        "symfony/translation": "7.1.*"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^1.10",
+        "phpunit/phpunit": "^9.5",
+        "slevomat/coding-standard": "~8.0"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.1-dev"
+            "dev-master": "2.2-dev"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     }
 }
