feat: Using interfaces from core (related to novosga/novosga#385)

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -13,3 +13,6 @@ services:
     Novosga\UsersBundle\Controller\:
         resource: '../../Controller'
         tags: ['controller.service_arguments']
+        
+    Novosga\UsersBundle\Form\:
+        resource: '../../Form'
